--- a/README
+++ b/README
@@ -23,7 +23,7 @@ Supported link-layer types:
     DLT_EN10MB
 
 License
-MODIFIED BEER-WARE LICENSE" (Revision 666):
+MODIFIED BEER-WARE LICENSE (Revision 666):
 Denis Dzíbela wrote this project.  As long as you retain this notice you
 can do whatever you want with this stuff. Academic dishonesty is not cool,
 and you should not commit plagiarism. If we meet some day, and you think
